--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                                         <th>Extra Storage Cost</th>
                                         <th>$<span id="extra-storage">0</span></th>
                                     </tr>
-                                    <tr>
+                                    <tr style="border-bottom: 2px solid #000;">
                                         <th>Delivery Charge</th>
                                         <th>$<span id="delivery-charge">0</span></th>
                                     </tr>
